src/test/resources/public/input/typechecking/fail/incompatible_return/fail01.jova
class Test{

}

class Main {

  public int main() {

    return "should not do this";
  }

}